--- a/README
+++ b/README
@@ -1,2 +1,6 @@
+The main file is 
+GEF2012_wind_forecast.ipynb
+which calls all remaining files
+
 If the ipynb cannot be opened, please use nbviewer:
 https://nbviewer.jupyter.org/github/maximilian-jansen/GEF-wind-forecasting/blob/master/GEF2012_wind_forecast.ipynb
