--- a/README
+++ b/README
@@ -4,3 +4,6 @@ which calls all remaining files
 
 If the ipynb cannot be opened, please use nbviewer:
 https://nbviewer.jupyter.org/github/maximilian-jansen/GEF-wind-forecasting/blob/master/GEF2012_wind_forecast.ipynb
+
+The file load_GEF2012.ipynb and process_GEF2012.ipnyb provide functions to load and preprocess the GEF2012 data
+The file NN_Regression.py provides a neural network estimator
