--- a/README
+++ b/README
@@ -2,7 +2,7 @@ The main file is
 GEF2012_wind_forecast.ipynb
 which calls all remaining files
 
-If the ipynb cannot be opened, please use nbviewer:
+If the ipynb is not being appropriately displayed, please use nbviewer:
 https://nbviewer.jupyter.org/github/maximilian-jansen/GEF-wind-forecasting/blob/master/GEF2012_wind_forecast.ipynb
 
 The file load_GEF2012.py and process_GEF2012.py provide functions to load and preprocess the GEF2012 data
